apps/keycloak/javelin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: keycloak.wesl.io
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /robots.txt
            pathType: Exact
            backend:
              service:
                name: keycloak
                port:
                  name: http
